--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,9 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.javatechie</groupId>
-	<artifactId>spring-boot-crud-example-2</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-crud-example-2</name>
-	<description>Demo project for Spring Boot</description>
+	<groupId>com.springbootdemo</groupId>
+	<artifactId>springbootdemo</artifactId>
+	<name>springbootdemo</name>
 
 	<properties>
 		<java.version>1.8</java.version>
